LoginViewModel, SignUpViewModel, UpdateUserViewModel 분리

--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -118,6 +118,9 @@
     "My milestones" : {
 
     },
+    "MY SPLASH SCREEN" : {
+
+    },
     "Name" : {
 
     },
@@ -143,6 +146,9 @@
 
     },
     "Password" : {
+
+    },
+    "Please enter your email, name, and password." : {
 
     },
     "Price of a cigarette or a pack of cigarettes" : {
