wip: UI 수정과 Lottie Files 테스트

--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -43,6 +43,9 @@
     "Add smoking" : {
 
     },
+    "Add your smoking habits and cravings." : {
+
+    },
     "Already have an account?" : {
 
     },
@@ -53,6 +56,9 @@
 
     },
     "be 8-32 characters long" : {
+
+    },
+    "Begin your journey and stay updated with your progress." : {
 
     },
     "Change Password" : {
@@ -70,7 +76,7 @@
     "Continue with Apple" : {
 
     },
-    "Create your account" : {
+    "Create your account." : {
 
     },
     "Dashboard" : {
@@ -103,6 +109,9 @@
     "Factor row" : {
 
     },
+    "Feelings and Symptoms" : {
+
+    },
     "General" : {
 
     },
@@ -122,6 +131,9 @@
 
     },
     "If you are creating a new account," : {
+
+    },
+    "Keep track of your emotions and withdrawal symptoms." : {
 
     },
     "Language" : {
@@ -202,10 +214,13 @@
     "Settings" : {
 
     },
+    "Share Your Milestones" : {
+
+    },
     "Smoking log chart card" : {
 
     },
-    "Step 1: Registration" : {
+    "Start Your Quitting Log" : {
 
     },
     "Step 2: Create Quit Log" : {
@@ -218,6 +233,9 @@
 
     },
     "Support" : {
+
+    },
+    "Support and get support from others who are also on this journey." : {
 
     },
     "Symptom row" : {
@@ -235,6 +253,9 @@
     "Time Zone" : {
 
     },
+    "Track Habits and Cravings" : {
+
+    },
     "Update factor sheet" : {
 
     },
@@ -242,6 +263,9 @@
 
     },
     "Welcome back" : {
+
+    },
+    "Welcome to Sennight!" : {
 
     },
     "Why do you want to stop smoking?" : {
