Onboarding step 1 view UI 추가
Lottie JSON file 생성

--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "" : {
+
+    },
     " and " : {
 
     },
@@ -13,7 +16,13 @@
     " will apply." : {
 
     },
+    ":" : {
+
+    },
     "!" : {
+
+    },
+    "%lld" : {
 
     },
     "%lld%%" : {
@@ -40,10 +49,10 @@
     "Activity row" : {
 
     },
-    "Add smoking" : {
+    "Add and manage your smoking habits and cravings." : {
 
     },
-    "Add your smoking habits and cravings." : {
+    "Add smoking" : {
 
     },
     "Already have an account?" : {
@@ -53,6 +62,9 @@
 
     },
     "App Version" : {
+
+    },
+    "Are you currently a smoker?" : {
 
     },
     "be 8-32 characters long" : {
@@ -100,6 +112,9 @@
     "Email address" : {
 
     },
+    "Enter your motivation" : {
+
+    },
     "Error" : {
 
     },
@@ -127,7 +142,10 @@
     "Health progress card" : {
 
     },
-    "Hello, World!" : {
+    "Hour" : {
+
+    },
+    "How many years have you been smoking?" : {
 
     },
     "If you are creating a new account," : {
@@ -142,6 +160,15 @@
     "Legal" : {
 
     },
+    "Let us know the date you quit smoking." : {
+
+    },
+    "Let us know the number of cigarettes you smoke daily." : {
+
+    },
+    "Let us know the price of a pack of cigarettes you usually buy." : {
+
+    },
     "Licenses" : {
 
     },
@@ -152,6 +179,9 @@
 
     },
     "Milestones" : {
+
+    },
+    "Minute" : {
 
     },
     "Money saved card" : {
@@ -181,9 +211,6 @@
     "Next" : {
 
     },
-    "Number of Cigarettes per Day" : {
-
-    },
     "OK" : {
 
     },
@@ -191,9 +218,6 @@
 
     },
     "Please enter your email, name, and password." : {
-
-    },
-    "Price of a cigarette or a pack of cigarettes" : {
 
     },
     "Privacy and Security" : {
@@ -208,8 +232,24 @@
     "Profile" : {
 
     },
-    "Quit Date" : {
+    "Q." : {
 
+    },
+    "Select Date" : {
+
+    },
+    "Selected Date: %@" : {
+
+    },
+    "Selected Time: %@:%@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Selected Time: %1$@:%2$@"
+          }
+        }
+      }
     },
     "Settings" : {
 
@@ -223,10 +263,25 @@
     "Start Your Quitting Log" : {
 
     },
-    "Step 2: Create Quit Log" : {
+    "Step 1: daily cigarettes" : {
 
     },
-    "Step 3: Motivation" : {
+    "Step 2: cigarettes" : {
+
+    },
+    "Step 3: firstCigarette" : {
+
+    },
+    "Step 4: smoking years" : {
+
+    },
+    "Step 5: Smoking status" : {
+
+    },
+    "Step 6: Quit attempt" : {
+
+    },
+    "Step 7: Motivation" : {
 
     },
     "Subscription/Billing Information" : {
@@ -242,6 +297,9 @@
 
     },
     "Symptoms" : {
+
+    },
+    "Tell us what motivated you to quit smoking?" : {
 
     },
     "Terms & Conditions" : {
@@ -265,13 +323,16 @@
     "Welcome back" : {
 
     },
-    "Welcome to Sennight!" : {
+    "Welcome to Sennight" : {
 
     },
-    "Why do you want to stop smoking?" : {
+    "What time do you usually have your first cigarette of the day?" : {
 
     },
     "Your password must:" : {
+
+    },
+    "입력해주세요" : {
 
     }
   },
