--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -205,6 +205,9 @@
     "Next" : {
 
     },
+    "Note: The health benefits listed are general estimates and may vary from person to person. Please consult with a healthcare professional for personalized guidance" : {
+
+    },
     "OK" : {
 
     },
