Milestone, AidProduct read 기능 구현

--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "" : {
+
+    },
     " and " : {
 
     },
@@ -13,19 +16,16 @@
     " will apply." : {
 
     },
+    ":" : {
+
+    },
     "!" : {
 
     },
+    "%lld" : {
+
+    },
     "%lld%%" : {
-
-    },
-    "3 Month Fresh" : {
-
-    },
-    "7 Day Fresh" : {
-
-    },
-    "30 Day Hero" : {
 
     },
     "About App" : {
@@ -53,6 +53,9 @@
 
     },
     "App Version" : {
+
+    },
+    "Are you currently a smoker?" : {
 
     },
     "be 8-32 characters long" : {
@@ -100,13 +103,13 @@
     "Email address" : {
 
     },
+    "Enter your motivation" : {
+
+    },
     "Error" : {
 
     },
     "Factor detail edit" : {
-
-    },
-    "Factor row" : {
 
     },
     "Feelings and Symptoms" : {
@@ -127,7 +130,10 @@
     "Health progress card" : {
 
     },
-    "Hello, World!" : {
+    "Hour" : {
+
+    },
+    "How many years have you been smoking?" : {
 
     },
     "If you are creating a new account," : {
@@ -142,6 +148,15 @@
     "Legal" : {
 
     },
+    "Let us know the date you quit smoking." : {
+
+    },
+    "Let us know the number of cigarettes you smoke daily." : {
+
+    },
+    "Let us know the price of a pack of cigarettes you usually buy." : {
+
+    },
     "Licenses" : {
 
     },
@@ -152,6 +167,9 @@
 
     },
     "Milestones" : {
+
+    },
+    "Minute" : {
 
     },
     "Money saved card" : {
@@ -181,9 +199,6 @@
     "Next" : {
 
     },
-    "Number of Cigarettes per Day" : {
-
-    },
     "OK" : {
 
     },
@@ -191,9 +206,6 @@
 
     },
     "Please enter your email, name, and password." : {
-
-    },
-    "Price of a cigarette or a pack of cigarettes" : {
 
     },
     "Privacy and Security" : {
@@ -208,8 +220,24 @@
     "Profile" : {
 
     },
-    "Quit Date" : {
+    "Q." : {
 
+    },
+    "Select Date" : {
+
+    },
+    "Selected Date: %@" : {
+
+    },
+    "Selected Time: %@:%@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Selected Time: %1$@:%2$@"
+          }
+        }
+      }
     },
     "Settings" : {
 
@@ -223,10 +251,25 @@
     "Start Your Quitting Log" : {
 
     },
-    "Step 2: Create Quit Log" : {
+    "Step 1: daily cigarettes" : {
 
     },
-    "Step 3: Motivation" : {
+    "Step 2: cigarettes" : {
+
+    },
+    "Step 3: firstCigarette" : {
+
+    },
+    "Step 4: smoking years" : {
+
+    },
+    "Step 5: Smoking status" : {
+
+    },
+    "Step 6: Quit attempt" : {
+
+    },
+    "Step 7: Motivation" : {
 
     },
     "Subscription/Billing Information" : {
@@ -242,6 +285,9 @@
 
     },
     "Symptoms" : {
+
+    },
+    "Tell us what motivated you to quit smoking?" : {
 
     },
     "Terms & Conditions" : {
@@ -268,10 +314,19 @@
     "Welcome to Sennight!" : {
 
     },
-    "Why do you want to stop smoking?" : {
+    "What time do you usually have your first cigarette of the day?" : {
 
     },
     "Your password must:" : {
+
+    },
+    "금연보조제 아이디: %lld" : {
+
+    },
+    "마일스톤 아이디: %lld" : {
+
+    },
+    "입력해주세요" : {
 
     }
   },
