--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -31,6 +31,9 @@
     "30 Day Hero" : {
 
     },
+    "100" : {
+
+    },
     "100%" : {
 
     },
@@ -47,6 +50,12 @@
 
     },
     "Add and manage your smoking habits and cravings." : {
+
+    },
+    "Aid product detail edit" : {
+
+    },
+    "Aid product row" : {
 
     },
     "Already have an account?" : {
@@ -97,6 +106,15 @@
     "Don't have an account?" : {
 
     },
+    "Done" : {
+
+    },
+    "Edit Quit Attempt" : {
+
+    },
+    "Edit This Quit Attempt" : {
+
+    },
     "Email" : {
 
     },
@@ -107,12 +125,6 @@
 
     },
     "Error" : {
-
-    },
-    "Factor detail edit" : {
-
-    },
-    "Factor row" : {
 
     },
     "Feelings and Symptoms" : {
@@ -169,6 +181,9 @@
     "Logout" : {
 
     },
+    "Menu" : {
+
+    },
     "Milestone Posts" : {
 
     },
@@ -176,9 +191,6 @@
 
     },
     "Minute" : {
-
-    },
-    "Money saved card" : {
 
     },
     "Motivation card" : {
@@ -193,7 +205,7 @@
     "New activity sheet" : {
 
     },
-    "New factor sheet" : {
+    "New aid product sheet" : {
 
     },
     "New smoking sheet" : {
@@ -284,6 +296,12 @@
     "Step 7: Motivation" : {
 
     },
+    "Stop This Quit Attempt" : {
+
+    },
+    "Submit" : {
+
+    },
     "Subscription/Billing Information" : {
 
     },
@@ -314,7 +332,7 @@
     "Track Habits and Cravings" : {
 
     },
-    "Update factor sheet" : {
+    "Update aid product sheet" : {
 
     },
     "User achieved %@ Milestone! Send support?" : {
