--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -16,6 +16,9 @@
     " will apply." : {
 
     },
+    "_Last updated on 2024/07/30_" : {
+
+    },
     ":" : {
 
     },
@@ -25,6 +28,36 @@
     "%lld" : {
 
     },
+    "1. Acceptance of Terms" : {
+
+    },
+    "2. User Accounts" : {
+
+    },
+    "3. Use of the App" : {
+
+    },
+    "4. Intellectual Property" : {
+
+    },
+    "5. Privacy" : {
+
+    },
+    "6. Third-Party Links" : {
+
+    },
+    "7. Disclaimer" : {
+
+    },
+    "8. Limitation of Liability" : {
+
+    },
+    "9. Changes to Terms" : {
+
+    },
+    "10. Contact Information" : {
+
+    },
     "100" : {
 
     },
@@ -32,6 +65,9 @@
 
     },
     "About App" : {
+
+    },
+    "About App View" : {
 
     },
     "About Milestones" : {
@@ -61,13 +97,10 @@
     "All" : {
 
     },
+    "All content, trademarks, and other intellectual property on the Sennight are owned by or licensed to Sennight and are protected by applicable laws. You may not use, reproduce, or distribute any content from the Sennight without explicit permission." : {
+
+    },
     "Already have an account?" : {
-
-    },
-    "App Permissions" : {
-
-    },
-    "App Version" : {
 
     },
     "Are you currently a smoker?" : {
@@ -79,10 +112,19 @@
     "Begin your journey and stay updated with your progress." : {
 
     },
+    "By accessing or using the Sennight (\"Sennight\"), you agree to comply with and be bound by these Terms and Conditions." : {
+
+    },
     "Cancel" : {
 
     },
     "Change Password" : {
+
+    },
+    "Change Password View" : {
+
+    },
+    "Cigarette Price" : {
 
     },
     "Click the button below and get your milestone." : {
@@ -109,10 +151,10 @@
     "Create your account." : {
 
     },
-    "Dashboard" : {
+    "Daily Cigarettes" : {
 
     },
-    "Data Usage" : {
+    "Dashboard" : {
 
     },
     "Date achieved: %@" : {
@@ -133,6 +175,15 @@
     "Email address" : {
 
     },
+    "Enter cigarette price" : {
+
+    },
+    "Enter daily cigarettes" : {
+
+    },
+    "Enter years smoking" : {
+
+    },
     "Enter your motivation" : {
 
     },
@@ -145,7 +196,10 @@
     "Filter" : {
 
     },
-    "General" : {
+    "First Cigarette Time" : {
+
+    },
+    "For any questions or concerns regarding these Terms and Conditions, please contact us at [Sennight Help](mailto:eujeenhan@gmail.com)." : {
 
     },
     "Get Started" : {
@@ -169,13 +223,13 @@
     "If you are creating a new account," : {
 
     },
+    "In no event shall the creators be liable for any indirect, incidental, special, or consequential damages arising from or related to your use of the Sennight." : {
+
+    },
     "It's tough. So are you." : {
 
     },
     "Keep track of your emotions and withdrawal symptoms." : {
-
-    },
-    "Language" : {
 
     },
     "Legal" : {
@@ -244,9 +298,6 @@
     "Please enter your email, name, and password." : {
 
     },
-    "Privacy and Security" : {
-
-    },
     "Privacy Policy" : {
 
     },
@@ -278,10 +329,19 @@
         }
       }
     },
+    "Sennight Help" : {
+
+    },
     "Settings" : {
 
     },
     "Share Your Milestones" : {
+
+    },
+    "Smoking Habits" : {
+
+    },
+    "Smoking History" : {
 
     },
     "Smoking log chart card" : {
@@ -323,9 +383,6 @@
     "Stop This Quit Attempt" : {
 
     },
-    "Subscription/Billing Information" : {
-
-    },
     "Support" : {
 
     },
@@ -344,13 +401,22 @@
     "Terms & Conditions" : {
 
     },
+    "Terms and Conditions" : {
+
+    },
     "Terms of Service" : {
+
+    },
+    "The Sennight is provided on an “as is” and “as available” basis. We make no warranties or representations regarding the availability, accuracy, or reliability of the Sennight. We disclaim all warranties to the fullest extent permitted by law." : {
+
+    },
+    "The Sennight may contain links to third-party websites or services. We are not responsible for the content, privacy policies, or practices of any third-party sites." : {
 
     },
     "This will stop your current quit attempt and reset all your progress.\nThis action cannot be undone." : {
 
     },
-    "Time Zone" : {
+    "To access certain features of the Sennight, you may be required to create a user account. You are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account." : {
 
     },
     "Track Habits and Cravings" : {
@@ -368,6 +434,9 @@
     "User achieved %@ Milestone! Send support?" : {
 
     },
+    "We may update these Terms from time to time. Any changes will be posted on this page with an updated effective date. Your continued use of the App after any changes constitutes acceptance of the new terms." : {
+
+    },
     "Welcome back" : {
 
     },
@@ -377,10 +446,19 @@
     "What time do you usually have your first cigarette of the day?" : {
 
     },
+    "Years Smoking" : {
+
+    },
+    "You agree to use the Sennight only for lawful purposes and in accordance with these Terms. You may not use the Sennight in any way that could damage, disable, overburden, or impair the Sennight or interfere with any other party’s use of the Sennight." : {
+
+    },
     "You’ve just achieved your first milestone. Keep pushing forward and you'll mark more milestones along the way." : {
 
     },
     "Your password must:" : {
+
+    },
+    "Your use of the Sennight is also governed by our [Privacy Policy](https://sennight-ios.github.io/privacy). By using the Sennight, you consent to the collection and use of your information as described in the Privacy Policy." : {
 
     },
     "입력해주세요" : {
