--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -16,7 +16,37 @@
     " will apply." : {
 
     },
-    "_Last updated on 2024/07/30_" : {
+    "- **Access and Update Your Information**: Request access to or update your personal information." : {
+
+    },
+    "- **Device Information**: Information about your device, such as your device ID, operating system, and other technical details." : {
+
+    },
+    "- **For Legal Reasons**: We may disclose your information if required to do so by law or to protect our rights, privacy, safety, or property." : {
+
+    },
+    "- **Opt-Out**: Choose not to receive promotional communications from us by following the instructions in those communications." : {
+
+    },
+    "- **Personal Information**: Information that identifies you personally, such as your name, email address, or other contact details." : {
+
+    },
+    "- **To Communicate with You**: Sending updates, notifications, and other information related to the App." : {
+
+    },
+    "- **To Comply with Legal Obligations**: Adhering to applicable laws and regulations." : {
+
+    },
+    "- **To Improve the App**: Analyzing usage patterns to enhance features and performance." : {
+
+    },
+    "- **To Provide and Maintain the App**: Ensuring the App functions correctly and addressing any issues." : {
+
+    },
+    "- **Usage Data**: Information about how you use the App, including your interactions with features and services." : {
+
+    },
+    "- **With Service Providers**: We may share your information with third-party service providers who assist us in operating the App and providing services." : {
 
     },
     ":" : {
@@ -31,10 +61,22 @@
     "1. Acceptance of Terms" : {
 
     },
+    "1. Introduction" : {
+
+    },
+    "2. Information We Collect" : {
+
+    },
     "2. User Accounts" : {
 
     },
+    "3. How We Use Your Information" : {
+
+    },
     "3. Use of the App" : {
+
+    },
+    "4. How We Share Your Information" : {
 
     },
     "4. Intellectual Property" : {
@@ -43,10 +85,22 @@
     "5. Privacy" : {
 
     },
+    "5. Security" : {
+
+    },
     "6. Third-Party Links" : {
 
     },
+    "6. Your Choices" : {
+
+    },
+    "7. Children’s Privacy" : {
+
+    },
     "7. Disclaimer" : {
+
+    },
+    "8. Changes to This Privacy Policy" : {
 
     },
     "8. Limitation of Liability" : {
@@ -64,12 +118,6 @@
     "100%" : {
 
     },
-    "About App" : {
-
-    },
-    "About App View" : {
-
-    },
     "About Milestones" : {
 
     },
@@ -83,6 +131,9 @@
 
     },
     "Add and manage your smoking habits and cravings." : {
+
+    },
+    "Add My Motivation" : {
 
     },
     "Add New Milestone" : {
@@ -106,9 +157,6 @@
     "Are you currently a smoker?" : {
 
     },
-    "Are you currently a smoker?" : {
-
-    },
     "be 8-32 characters long" : {
 
     },
@@ -124,9 +172,6 @@
     "Change Password" : {
 
     },
-    "Change Password View" : {
-
-    },
     "Cigarette Price" : {
 
     },
@@ -134,6 +179,9 @@
 
     },
     "Close" : {
+
+    },
+    "Confirm New Password" : {
 
     },
     "Confirm Password" : {
@@ -148,10 +196,16 @@
     "Continue with Apple" : {
 
     },
+    "Copyright (c) 2024 Eujeen Han" : {
+
+    },
     "Craving level" : {
 
     },
     "Create your account." : {
+
+    },
+    "Current Password" : {
 
     },
     "Daily Cigarettes" : {
@@ -166,22 +220,28 @@
     "Dismiss" : {
 
     },
+    "do you usually have your first cigarette of the day?" : {
+
+    },
     "Don't have an account?" : {
 
     },
     "Edit This Quit Attempt" : {
 
     },
-    "Email" : {
+    "Email address" : {
 
     },
-    "Enter your motivation" : {
+    "Empty Motivation!" : {
 
     },
     "Enter cigarette price" : {
 
     },
     "Enter daily cigarettes" : {
+
+    },
+    "Enter price" : {
 
     },
     "Enter years smoking" : {
@@ -202,10 +262,10 @@
     "First Cigarette Time" : {
 
     },
-    "For any questions or concerns regarding these Terms and Conditions, please contact us at [Sennight Help](mailto:eujeenhan@gmail.com)." : {
+    "Get started" : {
 
     },
-    "Get started" : {
+    "Get Started" : {
 
     },
     "have at least 1 digit (0-9)" : {
@@ -214,19 +274,37 @@
     "have at least 1 letter (A-Z, a-z)" : {
 
     },
+    "have you been smoking?" : {
+
+    },
     "Hello, World!" : {
 
     },
     "Hour" : {
 
     },
-    "How many years have you been smoking?" : {
+    "How many years" : {
 
     },
     "If you are creating a new account," : {
 
     },
+    "If you have any questions or concerns about this Privacy Policy, please contact us at [Sennight Help](mailto:eujeenhan@gmail.com)." : {
+
+    },
+    "If you have any questions or concerns about this Terms and Conditions, please contact us at [Sennight Help](mailto:eujeenhan@gmail.com)." : {
+
+    },
+    "If you’re currently smoke-free, add the number of cigarettes you used to smoke daily. This will help calculate your savings." : {
+
+    },
+    "If you’re currently smoke-free, enter the price of cigarettes you used to smoke." : {
+
+    },
     "In no event shall the creators be liable for any indirect, incidental, special, or consequential damages arising from or related to your use of the Sennight." : {
+
+    },
+    "Invalid Price" : {
 
     },
     "It's tough. So are you." : {
@@ -235,25 +313,13 @@
     "Keep track of your emotions and withdrawal symptoms." : {
 
     },
+    "Keep track your smoking habits" : {
+
+    },
     "Legal" : {
 
     },
-    "Let us know the date you quit smoking." : {
-
-    },
-    "Let us know the number of cigarettes you smoke daily." : {
-
-    },
-    "Let us know the price of a pack of cigarettes you usually buy." : {
-
-    },
-    "Let us know the date you quit smoking." : {
-
-    },
-    "Let us know the number of cigarettes you smoke daily." : {
-
-    },
-    "Let us know the price of a pack of cigarettes you usually buy." : {
+    "Let us know" : {
 
     },
     "Licenses" : {
@@ -274,6 +340,15 @@
     "Minute" : {
 
     },
+    "MIT License" : {
+
+    },
+    "monitor your progress, and stay informed about withdrawal symptoms and cessation support products." : {
+
+    },
+    "motivated you to quit smoking?" : {
+
+    },
     "Motivation card" : {
 
     },
@@ -292,10 +367,16 @@
     "New aid product sheet" : {
 
     },
+    "New Password" : {
+
+    },
     "New symptom sheet" : {
 
     },
     "Next" : {
+
+    },
+    "No, I'm not smoking now!" : {
 
     },
     "Note: The health benefits listed are general estimates and may vary from person to person. Please consult with a healthcare professional for personalized guidance." : {
@@ -307,7 +388,22 @@
     "Password" : {
 
     },
-    "Please enter your email, name, and password." : {
+    "Password must be between 8 and 32 characters long." : {
+
+    },
+    "Password must include at least one letter and one digit." : {
+
+    },
+    "Passwords do not match." : {
+
+    },
+    "Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:" : {
+
+    },
+    "Please let us know if you are planning to start or continue your journey to quit smoking." : {
+
+    },
+    "Previous" : {
 
     },
     "Privacy Policy" : {
@@ -319,7 +415,10 @@
     "Profile" : {
 
     },
-    "Q." : {
+    "Regardless of how long you've been a smoker, it’s never too late to improve your health." : {
+
+    },
+    "Right after you wake up or later in the morning?" : {
 
     },
     "Save" : {
@@ -328,42 +427,16 @@
     "Select Date" : {
 
     },
-    "Selected Date: %@" : {
+    "Sennight is not intended for use by individuals under the age of 13. We do not knowingly collect or solicit personal information from children under 13. If we become aware that we have collected such information, we will take steps to delete it." : {
 
-    },
-    "Selected Time: %@:%@" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Selected Time: %1$@:%2$@"
-          }
-        }
-      }
-    },
-    "Sennight Help" : {
-
-    },
-    "Select Date" : {
-
-    },
-    "Selected Date: %@" : {
-
-    },
-    "Selected Time: %@:%@" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Selected Time: %1$@:%2$@"
-          }
-        }
-      }
     },
     "Settings" : {
 
     },
     "Share Your Milestones" : {
+
+    },
+    "Sign in to personalize your app experience. Track your smoking habits, monitor your progress, and stay informed about withdrawal symptoms and cessation support products." : {
 
     },
     "Smoking Habits" : {
@@ -379,27 +452,6 @@
 
     },
     "Start Your Quitting Log" : {
-
-    },
-    "Step 1: daily cigarettes" : {
-
-    },
-    "Step 2: cigarettes" : {
-
-    },
-    "Step 3: firstCigarette" : {
-
-    },
-    "Step 4: smoking years" : {
-
-    },
-    "Step 5: Smoking status" : {
-
-    },
-    "Step 6: Quit attempt" : {
-
-    },
-    "Step 7: Motivation" : {
 
     },
     "Stop" : {
@@ -423,22 +475,37 @@
     "Symptoms" : {
 
     },
-    "Tell us what motivated you to quit smoking?" : {
+    "Tell us what" : {
 
     },
     "Terms & Conditions" : {
 
     },
-    "Terms and Conditions" : {
+    "Terms of Service" : {
 
     },
-    "Terms of Service" : {
+    "The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software." : {
+
+    },
+    "The current password does not match. Please make sure you’ve entered it correctly." : {
+
+    },
+    "the date you quit smoking." : {
+
+    },
+    "the number of cigarettes you smoke daily." : {
+
+    },
+    "the price of a pack of cigarettes you usually buy." : {
 
     },
     "The Sennight is provided on an “as is” and “as available” basis. We make no warranties or representations regarding the availability, accuracy, or reliability of the Sennight. We disclaim all warranties to the fullest extent permitted by law." : {
 
     },
     "The Sennight may contain links to third-party websites or services. We are not responsible for the content, privacy policies, or practices of any third-party sites." : {
+
+    },
+    "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE." : {
 
     },
     "This will stop your current quit attempt and reset all your progress.\nThis action cannot be undone." : {
@@ -456,28 +523,61 @@
     "Update aid product sheet" : {
 
     },
+    "Update Password" : {
+
+    },
     "Update start date" : {
 
     },
     "User achieved %@ Milestone! Send support?" : {
 
     },
+    "We do not sell or rent your personal information to third parties. We may share your information in the following circumstances:" : {
+
+    },
+    "We employ reasonable measures to protect your information from unauthorized access, use, or disclosure. However, no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee absolute security." : {
+
+    },
+    "We may collect and use the following types of information:" : {
+
+    },
     "We may update these Terms from time to time. Any changes will be posted on this page with an updated effective date. Your continued use of the App after any changes constitutes acceptance of the new terms." : {
+
+    },
+    "We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated effective date. Your continued use of the App after any changes constitutes acceptance of the new policy." : {
+
+    },
+    "We use the information we collect for various purposes, including:" : {
+
+    },
+    "We’ll track your progress and milestones." : {
 
     },
     "Welcome back" : {
 
     },
+    "Welcome to Sennight (\"Sennight\"). We are committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our iOS application. By using Sennight, you agree to the collection and use of information in accordance with this policy." : {
+
+    },
     "Welcome to Sennight!" : {
 
     },
-    "What time do you usually have your first cigarette of the day?" : {
+    "What time" : {
 
     },
     "Years Smoking" : {
 
     },
+    "Yes" : {
+
+    },
+    "Yes, I am a smoker." : {
+
+    },
     "You agree to use the Sennight only for lawful purposes and in accordance with these Terms. You may not use the Sennight in any way that could damage, disable, overburden, or impair the Sennight or interfere with any other party’s use of the Sennight." : {
+
+    },
+    "You may:" : {
 
     },
     "You’ve just achieved your first milestone. Keep pushing forward and you'll mark more milestones along the way." : {
@@ -486,10 +586,7 @@
     "Your password must:" : {
 
     },
-    "Your use of the Sennight is also governed by our [Privacy Policy](https://sennight-ios.github.io/privacy). By using the Sennight, you consent to the collection and use of your information as described in the Privacy Policy." : {
-
-    },
-    "입력해주세요" : {
+    "Your use of the Sennight is also governed by our Privacy Policy. By using the Sennight, you consent to the collection and use of your information as described in the Privacy Policy." : {
 
     }
   },
