--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -202,7 +202,7 @@
     "Continue with Apple" : {
 
     },
-    "Copyright (c) 2024 Eujeen Han" : {
+    "Copyright (c) 2024 Sennight" : {
 
     },
     "Craving level" : {
@@ -322,9 +322,6 @@
     "Leaving onboarding?" : {
 
     },
-    "Keep track your smoking habits" : {
-
-    },
     "Legal" : {
 
     },
@@ -392,9 +389,6 @@
 
     },
     "Not Now" : {
-
-    },
-    "No, I'm not smoking now!" : {
 
     },
     "Note: The health benefits listed are general estimates and may vary from person to person. Please consult with a healthcare professional for personalized guidance." : {
@@ -599,9 +593,6 @@
 
     },
     "You're Logging In..." : {
-
-    },
-    "You may:" : {
 
     },
     "You’ve just achieved your first milestone. Keep pushing forward and you'll mark more milestones along the way." : {
