--- a/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
+++ b/Sennight/Sennight/Resources/Localization/Localizable.xcstrings
@@ -287,7 +287,7 @@
     "Smoking log chart card" : {
 
     },
-    "Start quitting today!" : {
+    "START QUITTING TODAY!" : {
 
     },
     "Start Your Quitting Log" : {
